<resources>
    <string name="app_name">Walker Tracker</string>
    <string name="tab_text_1">Map</string>
    <string name="tab_text_2">Saved Path</string>
    <string name="travelled_distance">Travelled Distance</string>
    <string name="current_speed">Travel Speed</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="defaultDisplayTime">--</string>
    <string name="defaultDisplaySpeed">0.0 m/s</string>
    <string name="defaultDistanceDisplay">0.00 m</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>